# agent-trust-layer

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.json  skills.md
.github/ISSUE_TEMPLATE/: agent-trust-layer-integration.yml
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: lib.rs
artifacts/: agent_trust_layer.idl
client/: Cargo.toml  agent_trust_layer_client.idl  build.rs
client/src/: agent_trust_layer_client.rs  lib.rs
docs/: AGENT_TRUST_SUITE.md  INTEGRATION_KIT.md  REAL_USER_CAMPAIGN.md
onboarding/: aan_m4_submit_proof.json  announcement.json  announcement.template.json  announcement_trust_marketplace.json  announcement_trust_missions.json  announcement_v2.json  chat_post.json  chat_trust_marketplace.json  chat_trust_missions.json  chat_v2_submitted.json  cross_agent_announcement.json  cross_agent_chat_post.json  identity_card.json  identity_card.template.json  identity_card_trust_marketplace.json  identity_card_trust_missions.json  identity_card_v2.json  integration_call_to_action_board.json  integration_call_to_action_chat.json  marketplace_create_hire_intent_self.json  marketplace_register_provider_self.json  missions_create_integration_mission.json  real_user_campaign_board.json  real_user_campaign_chat.json  register_application.json  register_application.template.json  register_application_trust_marketplace.json  register_application_trust_missions.json  register_application_v2.json  register_service.json  state.json  submit_application_trust_marketplace.json  submit_application_trust_missions.json  thebook_signal_collab.json  update_github_url.json  v2_claimable_operator_args.json  v2_get_application_args.json  v2_register_service_production_args.json  v2_resolve_handle_args.json  v2_smoke_create_escrow_args.json  (+1 more)
scripts/: agent-runtime.mjs  agent-runtime.test.mjs  build.ps1  env.ps1  idl-patch.mjs  idl-patch.test.mjs  integration-kit.mjs  integration-kit.test.mjs  prepare-vercel.mjs  runtime-watchdog.ps1  runtime.ps1  test.ps1  wallet.ps1
src/: lib.rs
suite/trust-marketplace/: Cargo.toml  README.md  build.rs  skills.md
suite/trust-marketplace/.github/workflows/: ci.yml
suite/trust-marketplace/app/: Cargo.toml
suite/trust-marketplace/app/src/: lib.rs
suite/trust-marketplace/artifacts/: trust_marketplace.idl
suite/trust-marketplace/client/: Cargo.toml  build.rs  trust_marketplace_client.idl
suite/trust-marketplace/client/src/: lib.rs  trust_marketplace_client.rs
suite/trust-marketplace/src/: lib.rs
suite/trust-marketplace/tests/: gtest.rs
suite/trust-missions/: Cargo.toml  README.md  build.rs  skills.md
suite/trust-missions/.github/workflows/: ci.yml
suite/trust-missions/app/: Cargo.toml
suite/trust-missions/app/src/: lib.rs
suite/trust-missions/artifacts/: trust_missions.idl
suite/trust-missions/client/: Cargo.toml  build.rs  trust_missions_client.idl
suite/trust-missions/client/src/: lib.rs  trust_missions_client.rs
suite/trust-missions/src/: lib.rs
suite/trust-missions/tests/: gtest.rs
tests/: gtest.rs
