[package]
name = "agent-trust-layer"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Agent Trust Layer Sails program for escrow, service passports, and dispute arbitration"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
agent-trust-layer-app.workspace = true
sails-rs.workspace = true

[dev-dependencies]
agent-trust-layer-app.workspace = true
agent-trust-layer-client.workspace = true
sails-rs = { workspace = true, features = ["gtest"] }
tokio = { workspace = true, features = ["rt", "macros"] }

[build-dependencies]
agent-trust-layer-app.workspace = true
sails-rs = { workspace = true, features = ["build"] }

[workspace]
resolver = "3"
members = ["app", "client"]

[workspace.package]
version = "0.1.0"
authors = ["enzo95"]
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/enzo95/agent-trust-layer"
license = "MIT"
keywords = ["gear", "sails", "smart-contracts", "wasm", "no-std"]
categories = ["cryptography::cryptocurrencies", "no-std", "wasm"]

[workspace.dependencies]
sails-rs = "1.0.0"
tokio = "1.50.0"
agent-trust-layer-app = { version = "0.1.0", path = "app" }
agent-trust-layer-client = { version = "0.1.0", path = "client" }
