[package]
name = "agent-trust-layer-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Generated client for the Agent Trust Layer program"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs.workspace = true

[build-dependencies]
agent-trust-layer-app.workspace = true
sails-rs = { workspace = true, features = ["build"] }
