[package]
name = "trust-missions"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package allowing to build WASM binary for the program and IDL file for it"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs.workspace = true
trust-missions-app.workspace = true

[dev-dependencies]
sails-rs = { workspace = true, features = ["gtest"] }
tokio = { workspace = true, features = ["rt", "macros"] }
trust-missions-app.workspace = true
trust-missions-client.workspace = true

[build-dependencies]
sails-rs = { workspace = true, features = ["build"] }
trust-missions-app.workspace = true

[workspace]
resolver = "3"
members = ["app", "client"]

[workspace.package]
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/gear-tech/trust-missions"
license = "MIT"
keywords = ["gear", "sails", "smart-contracts", "wasm", "no-std"]
categories = ["cryptography::cryptocurrencies", "no-std", "wasm"]

[workspace.dependencies]
sails-rs = "1.0.0"
tokio = "1.50.0"
trust-missions-app = { version = "0.1.0", path = "app" }
trust-missions-client = { version = "0.1.0", path = "client" }
